[gd_scene load_steps=8 format=3 uid="uid://bqxvyj8qkgxpd"]

[ext_resource type="Script" path="res://scripts/player/PlayerController.gd" id="1_2k3vx"]
[ext_resource type="Script" path="res://scripts/environment/RoomController.gd" id="2_h5m8k"]
[ext_resource type="Script" path="res://scripts/ui/UIManager.gd" id="3_j9k2l"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.5
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.5
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(20, 0.1, 20)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(20, 0.1, 20)

[node name="Main" type="Node3D"]

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_2k3vx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_1")

[node name="CameraPivot" type="Node3D" parent="Player"]

[node name="Camera3D" type="Camera3D" parent="Player/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 1.5, 2)

[node name="InteractionRaycast" type="RayCast3D" parent="Player/CameraPivot/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 16

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Environment"]
collision_layer = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
shape = SubResource("BoxShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor"]
mesh = SubResource("BoxMesh_1")

[node name="RoomController" type="Node3D" parent="Environment"]
script = ExtResource("2_h5m8k")

[node name="LightingSystem" type="Node3D" parent="Environment/RoomController"]

[node name="SunLight" type="DirectionalLight3D" parent="Environment/RoomController/LightingSystem"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 0)
light_energy = 1.0
shadow_enabled = true

[node name="AmbientLight" type="OmniLight3D" parent="Environment/RoomController/LightingSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
light_energy = 0.3
light_color = Color(1, 0.9, 0.7, 1)

[node name="WeatherSystem" type="Node3D" parent="Environment/RoomController"]

[node name="RainParticles" type="GPUParticles3D" parent="Environment/RoomController/WeatherSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
emitting = false
amount = 1000

[node name="SnowParticles" type="GPUParticles3D" parent="Environment/RoomController/WeatherSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
emitting = false
amount = 500

[node name="StormParticles" type="GPUParticles3D" parent="Environment/RoomController/WeatherSystem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
emitting = false
amount = 2000

[node name="WeatherAudio" type="AudioStreamPlayer3D" parent="Environment/RoomController/WeatherSystem"]

[node name="FurnitureContainer" type="Node3D" parent="Environment/RoomController"]

[node name="Walls" type="Node3D" parent="Environment/RoomController"]

[node name="Floor" type="Node3D" parent="Environment/RoomController"]

[node name="UIManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3_j9k2l")

[node name="MainMenu" type="Control" parent="UIManager"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CustomizationMenu" type="Control" parent="UIManager"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProductivityDisplay" type="Control" parent="UIManager"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="UIManager/ProductivityDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CurrentSession" type="Label" parent="UIManager/ProductivityDisplay/VBoxContainer"]
layout_mode = 2
text = "No active session"

[node name="ProductivityScore" type="Label" parent="UIManager/ProductivityDisplay/VBoxContainer"]
layout_mode = 2
text = "Score: --"

[node name="SessionTimer" type="Label" parent="UIManager/ProductivityDisplay/VBoxContainer"]
layout_mode = 2
text = "Time: 00:00"

[node name="ActivityType" type="Label" parent="UIManager/ProductivityDisplay/VBoxContainer"]
layout_mode = 2
text = "Activity: None"

[node name="CharacterInfo" type="Control" parent="UIManager"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="UIManager/CharacterInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Level" type="Label" parent="UIManager/CharacterInfo/VBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="ExperienceBar" type="ProgressBar" parent="UIManager/CharacterInfo/VBoxContainer"]
layout_mode = 2
max_value = 100.0

[node name="ExperienceLabel" type="Label" parent="UIManager/CharacterInfo/VBoxContainer"]
layout_mode = 2
text = "0 / 100 XP"

[node name="NotificationSystem" type="Control" parent="UIManager"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -200.0

[node name="NotificationContainer" type="VBoxContainer" parent="UIManager/NotificationSystem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0